chapter4 dataset section added

--- a/chapter4.ipynb
+++ b/chapter4.ipynb
@@ -313,7 +313,324 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "# Dataset"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TransformedTensorDataset(Dataset):\n",
+    "\n",
+    "    def __init__(self, x, y, transform=None):\n",
+    "        self.x = x\n",
+    "        self.y = y\n",
+    "        self.transform = transform\n",
+    "\n",
+    "    def __getitem__(self, idx):\n",
+    "        x = self.x[idx]\n",
+    "\n",
+    "        if self.transform:\n",
+    "            x = self.transform(x)\n",
+    "\n",
+    "        return x, self.y[idx]\n",
+    "    \n",
+    "    def __len__(self):\n",
+    "        return len(self.x)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "composer = Compose([\n",
+    "    RandomHorizontalFlip(p=0.5),\n",
+    "    Normalize(mean=(0.5,), std=(0.5,))\n",
+    "])\n",
+    "\n",
+    "dataset = TransformedTensorDataset(X_tensor, y_tensor, composer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def index_splitter(n, splits, seed=13):\n",
+    "\n",
+    "    idx = torch.arange(n)\n",
+    "\n",
+    "    splits_tensor = torch.as_tensor(splits)\n",
+    "\n",
+    "    multiplier = n / splits_tensor.sum()\n",
+    "\n",
+    "    splits_tensor = (multiplier * splits_tensor).long()\n",
+    "\n",
+    "    diff = n - splits_tensor.sum()\n",
+    "\n",
+    "    splits_tensor[0] += diff\n",
+    "\n",
+    "    torch.manual_seed(seed)\n",
+    "\n",
+    "    return random_split(idx, splits_tensor)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<torch.utils.data.dataset.Subset at 0x226a93e7bb0>"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_idx, val_idx = index_splitter(len(X_tensor), [80, 20])\n",
+    "# train_idx.indices\n",
+    "train_idx"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_sampler = SubsetRandomSampler(train_idx)\n",
+    "val_sampler = SubsetRandomSampler(val_idx)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_loader = DataLoader(dataset=dataset, batch_size=16, sampler=train_sampler)\n",
+    "val_loader = DataLoader(dataset=dataset, batch_size=16, sampler=val_sampler)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(15, 4)"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(iter(train_loader)), len(iter(val_loader))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As some transforms can be applied only to train set, the following procedure will best describe dataloader creation steps."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "X_train_tensor = X_tensor[train_idx]\n",
+    "y_train_tensor = y_tensor[train_idx]\n",
+    "\n",
+    "X_val_tensor = X_tensor[val_idx]\n",
+    "y_val_tensor = y_tensor[val_idx]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_composer = Compose([\n",
+    "    RandomHorizontalFlip(p=0.5),\n",
+    "    Normalize(mean=(0.5,), std=(0.5,))\n",
+    "])\n",
+    "\n",
+    "val_composer = Compose([\n",
+    "    Normalize(mean=(0.5,), std=(0.5,))\n",
+    "])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_dataset = TransformedTensorDataset(X_train_tensor, y_train_tensor, train_composer)\n",
+    "val_dataset = TransformedTensorDataset(X_val_tensor, y_val_tensor, val_composer)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_loader = DataLoader(dataset=train_dataset, batch_size=16, shuffle=True)\n",
+    "val_loader = DataLoader(dataset=val_dataset, batch_size=16)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Taking into account the imbalance in the data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([0., 1.]), tensor([ 80, 160]))"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "classes, counts = y_train_tensor.unique(return_counts=True)\n",
+    "classes, counts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([0.0125, 0.0063])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "weights = 1.0 / counts.float()\n",
+    "weights"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "torch.Size([240])\n",
+      "tensor([0.0063, 0.0063, 0.0063, 0.0063, 0.0063, 0.0125, 0.0063, 0.0063, 0.0063,\n",
+      "        0.0063])\n",
+      "tensor([1, 1, 1, 1, 1, 0, 1, 1, 1, 1])\n"
+     ]
+    }
+   ],
+   "source": [
+    "sample_weights = weights[y_train_tensor.squeeze().long()]\n",
+    "\n",
+    "print(sample_weights.shape)\n",
+    "print(sample_weights[:10])\n",
+    "print(y_train_tensor.squeeze().long()[:10])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "generator = torch.Generator()\n",
+    "\n",
+    "sampler = WeightedRandomSampler(\n",
+    "    weights=sample_weights,\n",
+    "    num_samples=len(sample_weights),\n",
+    "    generator=generator,\n",
+    "    replacement=True\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def make_balanced_sampler(y):\n",
+    "    _, counts = y.unique(return_counts=True)\n",
+    "    weights = 1.0 / counts.float()\n",
+    "    sample_weights = weights[y.squeeze().long()]\n",
+    "    generator = torch.Generator()\n",
+    "\n",
+    "    sampler = WeightedRandomSampler(\n",
+    "        weights=sample_weights,\n",
+    "        num_samples=len(sample_weights),\n",
+    "        generator=generator,\n",
+    "        replacement=True\n",
+    "    )\n",
+    "\n",
+    "    return sampler"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sampler = make_balanced_sampler(y_train_tensor)\n",
+    "\n",
+    "train_loader = DataLoader(dataset=train_dataset, batch_size=16, sampler=sampler)\n",
+    "val_loader = DataLoader(dataset=val_dataset, batch_size=16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "train_loader.sampler.generator.manual_seed(42)\n",
+    "random.seed(42)"
+   ]
   },
   {
    "cell_type": "code",
