chapter5 model config added

--- a/chapter5.ipynb
+++ b/chapter5.ipynb
@@ -676,7 +676,37 @@
   {
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "## Model configuration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n_channels = 1\n",
+    "\n",
+    "torch.manual_seed(13)\n",
+    "\n",
+    "cnn_model1 = nn.Sequential()\n",
+    "cnn_model1.add_module(\n",
+    "    'conv1',\n",
+    "    nn.Conv2d(in_channels=1, out_channels=n_channels, kernel_size=3)\n",
+    ")\n",
+    "cnn_model1.add_module('relu1', nn.ReLU())\n",
+    "cnn_model1.add_module('maxpool1', nn.MaxPool2d(kernel_size=2))\n",
+    "cnn_model1.add_module('flatten', nn.Flatten())\n",
+    "cnn_model1.add_module('fc1', nn.Linear(in_features=n_channels*4*4, out_features=10))\n",
+    "cnn_model1.add_module('relu2', nn.ReLU())\n",
+    "cnn_model1.add_module('fc2', nn.Linear(in_features=10, out_features=3))\n",
+    "\n",
+    "lr = 0.1\n",
+    "\n",
+    "multi_loss_fn = nn.CrossEntropyLoss(reduction='mean')\n",
+    "optimizer_cnn1 = optim.SGD(cnn_model1.parameters(), lr=lr)"
+   ]
   },
   {
    "cell_type": "code",
