--- a/chapter5.ipynb
+++ b/chapter5.ipynb
@@ -136,10 +136,10 @@
     {
      "data": {
       "text/plain": [
-       "tensor([[[[ -1.6527,   0.9334,   7.5699,   3.6439],\n",
-       "          [  8.2313,   1.4401,  19.9607,   6.2586],\n",
-       "          [ 11.3487,   0.4300,  20.8420, -16.7359],\n",
-       "          [ -2.4230, -21.8469,  -5.8135,   8.7434]]]],\n",
+       "tensor([[[[  2.9745,   2.5585,  -3.8549,  -0.2994],\n",
+       "          [ -5.7355,  12.0010,  -6.3837,  -7.6204],\n",
+       "          [  0.7231, -12.2673,  14.6833,   3.9878],\n",
+       "          [  1.7962,  14.8654, -19.2837,  14.3171]]]],\n",
        "       grad_fn=<ConvolutionBackward0>)"
       ]
      },
@@ -165,14 +165,14 @@
      "data": {
       "text/plain": [
        "Parameter containing:\n",
-       "tensor([[[[-0.3095,  0.0103,  0.0685],\n",
-       "          [ 0.1393,  0.2226,  0.3092],\n",
-       "          [ 0.0010, -0.1254, -0.2264]]],\n",
+       "tensor([[[[ 0.2157, -0.0247, -0.1548],\n",
+       "          [ 0.0497,  0.0097, -0.0506],\n",
+       "          [-0.0263,  0.2954, -0.0518]]],\n",
        "\n",
        "\n",
-       "        [[[-0.2973,  0.2315,  0.2437],\n",
-       "          [-0.1617, -0.0405,  0.1400],\n",
-       "          [ 0.1954, -0.1179, -0.2681]]]], requires_grad=True)"
+       "        [[[-0.2954,  0.2916,  0.3079],\n",
+       "          [ 0.1904, -0.1803,  0.0004],\n",
+       "          [-0.2405,  0.1300,  0.0224]]]], requires_grad=True)"
       ]
      },
      "execution_count": 6,
@@ -824,7 +824,7 @@
     {
      "data": {
       "text/plain": [
-       "<torch.utils.hooks.RemovableHandle at 0x235339ddea0>"
+       "<torch.utils.hooks.RemovableHandle at 0x2774c820d30>"
       ]
      },
      "execution_count": 32,
@@ -1557,7 +1557,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 53,
    "metadata": {},
    "outputs": [
     {
@@ -1580,7 +1580,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 54,
    "metadata": {},
    "outputs": [
     {
@@ -1599,6 +1599,57 @@
     "with plt.style.context('seaborn-white'):\n",
     "    fig = sbs_cnn.visualize_outputs(classifier_layers, y=labels_batch, yhat=predicted)\n",
     "  "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Accuracy"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[5, 7],\n",
+       "        [3, 3],\n",
+       "        [6, 6]])"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "sbs_cnn.correct(images_batch, labels_batch)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[59, 67],\n",
+       "        [55, 62],\n",
+       "        [71, 71]])"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "StepByStep.loader_apply(sbs_cnn.valid_loader, sbs_cnn.correct)"
    ]
   },
   {
