chapter6 data preparation added

--- a/chapter6.ipynb
+++ b/chapter6.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,8 +26,176 @@
     "from torchvision.datasets import ImageFolder\n",
     "from torch.optim.lr_scheduler import StepLR, ReduceLROnPlateau, MultiStepLR, CyclicLR, LambdaLR\n",
     "\n",
-    "from stepbystep.v2 import StepByStep\n",
+    "from stepbystep.v3 import StepByStep\n",
     "from data_generation.rps import download_rps"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Downloading data"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# download_rps()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Data preparation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp_transform = Compose([Resize(28), ToTensor()])\n",
+    "temp_dataset = ImageFolder(root='rps', transform=temp_transform)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([3, 28, 28])"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp_dataset[0][0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "2520"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "len(temp_dataset)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp_loader = DataLoader(temp_dataset, batch_size=16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[16.0000, 16.0000, 16.0000],\n",
+       "        [13.8748, 13.3048, 13.1962],\n",
+       "        [ 3.0507,  3.8268,  3.9754]])"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "first_images, first_labels = next(iter(temp_loader))\n",
+    "StepByStep.statistics_per_channel(first_images, first_labels)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[2520.0000, 2520.0000, 2520.0000],\n",
+       "        [2142.5356, 2070.0806, 2045.1444],\n",
+       "        [ 526.3025,  633.0677,  669.9556]])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results = StepByStep.loader_apply(temp_loader, StepByStep.statistics_per_channel)\n",
+    "results"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Normalize(mean=tensor([0.8502, 0.8215, 0.8116]), std=tensor([0.2089, 0.2512, 0.2659]))"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normalizer = StepByStep.make_normalizer(temp_loader)\n",
+    "normalizer\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "composer = Compose([\n",
+    "    Resize(28),\n",
+    "    ToTensor(),\n",
+    "    normalizer\n",
+    "])\n",
+    "\n",
+    "train_data = ImageFolder(root='rps', transform=composer)\n",
+    "val_data = ImageFolder(root='rps-test-set', transform=composer)\n",
+    "\n",
+    "train_loader = DataLoader(train_data, batch_size=16, shuffle=True)\n",
+    "val_loader = DataLoader(val_data, batch_size=16)"
    ]
   },
   {
