--- a/chapter6.ipynb
+++ b/chapter6.ipynb
@@ -199,6 +199,73 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Model class"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class CNN2(nn.Module):\n",
+    "\n",
+    "    def __init__(self, n_filters, p=0.0):\n",
+    "        super(CNN2, self).__init__()\n",
+    "\n",
+    "        self.n_filters = n_filters\n",
+    "        self.p = p\n",
+    "\n",
+    "        self.conv1 = nn.Conv2d(\n",
+    "            in_channels=3,\n",
+    "            out_channels=self.n_filters,\n",
+    "            kernel_size=3\n",
+    "        )\n",
+    "\n",
+    "        self.conv2 = nn.Conv2d(\n",
+    "            in_channels=self.n_filters,\n",
+    "            out_channels=self.n_filters,\n",
+    "            kernel_size=3\n",
+    "        )\n",
+    "\n",
+    "        self.fc1 = nn.Linear(self.n_filters * 5 * 5, 50)\n",
+    "        self.fc2 = nn.Linear(50, 3)\n",
+    "        self.drop = nn.Dropout(self.p)\n",
+    "\n",
+    "    def featurizer(self, x):\n",
+    "\n",
+    "        x = self.conv1(x)\n",
+    "        x = F.relu(x)\n",
+    "        x = F.max_pool2d(x, kernel_size=2)\n",
+    "        x = self.conv2(x)\n",
+    "        x = F.relu(x)\n",
+    "        x = F.max_pool2d(x, kernel_size=2)\n",
+    "        x = nn.Flatten()(x)\n",
+    "        \n",
+    "        return x\n",
+    "    \n",
+    "    def classifier(self, x):\n",
+    "\n",
+    "        if self.p > 0:\n",
+    "            x = self.drop(x)\n",
+    "        x = self.fc1(x)\n",
+    "        x = F.relu(x)\n",
+    "        if self.p > 0:\n",
+    "            x = self.drop(x)\n",
+    "        x = self.fc2(x)\n",
+    "        return x\n",
+    "    \n",
+    "    def forward(self, x):\n",
+    "\n",
+    "        x = self.featurizer(x)\n",
+    "        x = self.classifier(x)\n",
+    "        return x"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
