chapter6 model vonfig added

--- a/chapter6.ipynb
+++ b/chapter6.ipynb
@@ -266,6 +266,30 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Model configuration"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "karp_const = 3e-4\n",
+    "\n",
+    "torch.manual_seed(13)\n",
+    "\n",
+    "model_cnn2 = CNN2(n_filters=5, p=0.3)\n",
+    "\n",
+    "loss_fn = nn.CrossEntropyLoss(reduction='mean')\n",
+    "\n",
+    "optimizer = optim.SGD(model_cnn2.parameters(), lr=karp_const)"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
