chapter7 batch_norm added

--- a/chapter7.ipynb
+++ b/chapter7.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -437,6 +437,463 @@
    ],
    "source": [
     "StepByStep.loader_apply(val_loader, sbs_alex.correct)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Inception V3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "Downloading: \"https://download.pytorch.org/models/inception_v3_google-0cc3c7bd.pth\" to C:\\Users\\vchar/.cache\\torch\\hub\\checkpoints\\inception_v3_google-0cc3c7bd.pth\n",
+      "100%|██████████| 104M/104M [00:44<00:00, 2.45MB/s] \n"
+     ]
+    }
+   ],
+   "source": [
+    "model = inception_v3(weights=Inception_V3_Weights.DEFAULT)\n",
+    "freeze_model(model)\n",
+    "\n",
+    "torch.manual_seed(42)\n",
+    "model.AuxLogits.fc = nn.Linear(768, 3)\n",
+    "model.fc = nn.Linear(2048, 3)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def inception_loss(outputs, labels):\n",
+    "    try:\n",
+    "        main, aux = outputs\n",
+    "    except ValueError:\n",
+    "        main = outputs\n",
+    "        aux = None\n",
+    "        loss_aux = 0\n",
+    "\n",
+    "    multi_loss_fn = nn.CrossEntropyLoss(reduction='mean')\n",
+    "    loss_main = multi_loss_fn(main, labels)\n",
+    "    if aux is not None:\n",
+    "        loss_aux = multi_loss_fn(aux, labels)\n",
+    "    return loss_main + 0.4 * loss_aux"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "optimizer_model = optim.Adam(model.parameters(), lr=3e-4)\n",
+    "sbs_incep = StepByStep(model, inception_loss, optimizer_model)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "normalizer = Normalize(mean=[0.485, 0.456, 0.406],\n",
+    "std=[0.229, 0.224, 0.225])\n",
+    "\n",
+    "composer = Compose([Resize(299),\n",
+    "ToTensor(),\n",
+    "normalizer])\n",
+    "\n",
+    "train_data = ImageFolder(root='rps', transform=composer)\n",
+    "val_data = ImageFolder(root='rps-test-set', transform=composer)\n",
+    "# Builds a loader of each set\n",
+    "train_loader = DataLoader(train_data, batch_size=16, shuffle=True)\n",
+    "val_loader = DataLoader(val_data, batch_size=16)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sbs_incep.set_loaders(train_loader, val_loader)\n",
+    "sbs_incep.train(1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[105, 124],\n",
+       "        [ 77, 124],\n",
+       "        [117, 124]])"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "StepByStep.loader_apply(val_loader, sbs_incep.correct)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Batch normalization"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "torch.manual_seed(23)\n",
+    "dummy_points = torch.randn((200, 2)) + torch.rand((200, 2)) * 2\n",
+    "dummy_labels = torch.randint(2, (200, 1))\n",
+    "dummy_dataset = TensorDataset(dummy_points, dummy_labels)\n",
+    "dummy_loader = DataLoader(dummy_dataset, batch_size=64, shuffle=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "iterator = iter(dummy_loader)\n",
+    "batch1 = next(iterator)\n",
+    "batch2 = next(iterator)\n",
+    "batch3 = next(iterator)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([0.9850, 1.0381]), tensor([1.4802, 1.1832]))"
+      ]
+     },
+     "execution_count": 37,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean1, var1 = batch1[0].mean(axis=0), batch1[0].var(axis=0)\n",
+    "mean1, var1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OrderedDict([('running_mean', tensor([0., 0.])),\n",
+       "             ('running_var', tensor([1., 1.])),\n",
+       "             ('num_batches_tracked', tensor(0))])"
+      ]
+     },
+     "execution_count": 38,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "batch_normalizer = nn.BatchNorm1d(\n",
+    "  num_features=2, affine=False, momentum=None\n",
+    ")\n",
+    "batch_normalizer.state_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OrderedDict([('running_mean', tensor([0.9850, 1.0381])),\n",
+       "             ('running_var', tensor([1.4802, 1.1832])),\n",
+       "             ('num_batches_tracked', tensor(1))])"
+      ]
+     },
+     "execution_count": 39,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normed1 = batch_normalizer(batch1[0])\n",
+    "batch_normalizer.state_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([0.0000e+00, 4.0978e-08]), tensor([1.0159, 1.0159]))"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normed1.mean(axis=0), normed1.var(axis=0)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([1.0000, 1.0000])"
+      ]
+     },
+     "execution_count": 41,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normed1.var(axis=0, unbiased=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 42,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OrderedDict([('running_mean', tensor([0.9611, 0.9964])),\n",
+       "             ('running_var', tensor([1.4247, 1.0460])),\n",
+       "             ('num_batches_tracked', tensor(2))])"
+      ]
+     },
+     "execution_count": 42,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normed2 = batch_normalizer(batch2[0])\n",
+    "batch_normalizer.state_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([0.9611, 0.9964]), tensor([1.4247, 1.0460]))"
+      ]
+     },
+     "execution_count": 43,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "mean2, var2 = batch2[0].mean(axis=0), batch2[0].var(axis=0)\n",
+    "running_mean, running_var = (mean1 + mean2) / 2, (var1 + var2) / 2\n",
+    "running_mean, running_var"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([-0.0201,  0.2208]), tensor([0.7170, 1.0761]))"
+      ]
+     },
+     "execution_count": 44,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "batch_normalizer.eval()\n",
+    "normed3 = batch_normalizer(batch3[0])\n",
+    "normed3.mean(axis=0), normed3.var(axis=0, unbiased=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Momentum"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OrderedDict([('running_mean', tensor([0., 0.])),\n",
+       "             ('running_var', tensor([1., 1.])),\n",
+       "             ('num_batches_tracked', tensor(0))])"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "batch_normalizer_mom = nn.BatchNorm1d(\n",
+    "  num_features=2, affine=False, momentum=0.1\n",
+    ")\n",
+    "batch_normalizer_mom.state_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "OrderedDict([('running_mean', tensor([0.0985, 0.1038])),\n",
+       "             ('running_var', tensor([1.0480, 1.0183])),\n",
+       "             ('num_batches_tracked', tensor(1))])"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "normed1_mom = batch_normalizer_mom(batch1[0])\n",
+    "batch_normalizer_mom.state_dict()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "tensor([[0.0985, 0.1038]])"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "running_mean = torch.zeros((1, 2))\n",
+    "running_mean = 0.1 * batch1[0].mean(axis=0) + \\\n",
+    "  (1 - 0.1) * running_mean\n",
+    "running_mean"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "BatchNorm2d"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "torch.Size([64, 3, 10, 10])"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "torch.manual_seed(39)\n",
+    "dummy_images = torch.rand((200, 3, 10, 10))\n",
+    "dummy_labels = torch.randint(2, (200, 1))\n",
+    "dummy_dataset = TensorDataset(dummy_images, dummy_labels)\n",
+    "dummy_loader = DataLoader(\n",
+    "  dummy_dataset, batch_size=64, shuffle=True\n",
+    ")\n",
+    "iterator = iter(dummy_loader)\n",
+    "batch1 = next(iterator)\n",
+    "batch1[0].shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([ 1.9148e-08, -2.3544e-08,  9.0078e-08]) tensor([0.9999, 0.9999, 0.9999])\n"
+     ]
+    }
+   ],
+   "source": [
+    "batch_normalizer = nn.BatchNorm2d(\n",
+    "  num_features=3, affine=False, momentum=None\n",
+    ")\n",
+    "normed1 = batch_normalizer(batch1[0])\n",
+    "print(normed1.mean(axis=[0, 2, 3]),\n",
+    "normed1.var(axis=[0, 2, 3], unbiased=False))"
    ]
   },
   {
